--- a/valentine_final.html
+++ b/valentine_final.html
@@ -275,7 +275,7 @@
                 <div class="message-item">🙉 You listening to "I'm done, it's over!" every single day</div>
                 <div class="message-item">😅 My alakalu that you have to deal with forever</div>
                 
-                <div class="promise-text">It's a pinky promise! 🤙</div>
+                <div class="promise-text">It's a pinky promise! 😘</div>
                 <div class="final-text">You are the best Boondiiiiiii! ✨💖</div>
             </div>
         </div>
